--- a/src/RoundedResearchPoints/RoundedResearchPoints.csproj
+++ b/src/RoundedResearchPoints/RoundedResearchPoints.csproj
@@ -8,7 +8,7 @@
     <ProjectGuid>{47241581-B8C4-4D3A-8FA8-25A9CEC422DD}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>RoundedResearchPoints</RootNamespace>
+    <RootNamespace>JulianPerge.RoundedResearchPoints</RootNamespace>
     <AssemblyName>RoundedResearchPoints</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
@@ -20,7 +20,7 @@
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>.\</OutputPath>
+    <OutputPath>bin\Debug\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
